--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-01-21" />
 
-<title>Silas Decker Comp Bio Webpage</title>
+<title>Silas Decker Comp Bio Webpage :)</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,7 +350,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Silas Decker Comp Bio Webpage</h1>
+<h1 class="title toc-ignore">Silas Decker Comp Bio Webpage :)</h1>
 <h4 class="author">Silas Decker</h4>
 <h4 class="date">2025-01-21</h4>
 
